navigation bar update

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2779,7 +2779,7 @@ ol li {
 	padding-left: 0.25rem;
 }
 
-ul {
+/* ul {
 	list-style: disc;
 	margin: 0 0 2rem 0;
 	padding-left: 1rem;
@@ -2802,7 +2802,7 @@ ul.alt li {
 ul.alt li:first-child {
 	border-top: 0;
 	padding-top: 0;
-}
+} */
 
 dl {
 	margin: 0 0 2rem 0;
@@ -8565,6 +8565,11 @@ body.is-preload .items.onload-fade-in > * > .inner {
 	padding: 3em 2em 3em 0;
 	text-align: -webkit-auto;
 }
+@media screen and (max-width: 480px) {
+	.skillLeft {
+		width: 100%;
+	}
+}
 
 .skillRight {
 	width: 45%;
@@ -8573,12 +8578,11 @@ body.is-preload .items.onload-fade-in > * > .inner {
 	background-repeat: no-repeat;
 	position: relative;
 }
-
-/* .skillRight img {
-	max-width: 100%;
-	height: auto;
-	display: block;
-} */
+@media screen and (max-width: 480px) {
+	.skillRight {
+		width: 0%;
+	}
+}
 
 .skillContents {
 	margin-left: -15px;
@@ -8637,4 +8641,107 @@ body.is-preload .items.onload-fade-in > * > .inner {
 	color: rgba(0, 0, 0, 0.8);
 	font-family: "Playfair Display", Georgia, serif;
 	margin: 0 0 30px 0;
+}
+
+.navigation {
+	position: fixed;
+	width: 70px;
+	height: 280px;
+	border-radius: 35px;
+	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+	z-index: 99;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 1%;
+}
+@media screen and (max-width: 480px) {
+	.navigation {
+		visibility: hidden;
+	}
+}
+
+.navigation ul {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.navigation ul li {
+	position: relative;
+	list-style: none;
+	width: 70px;
+	height: 70px;
+	z-index: 1;
+}
+
+.navigation ul li a {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	text-align: center;
+	color: #333;
+	font-weight: 500;
+}
+
+.navigation ul li a .naviIcon {
+	position: relative;
+	display: block;
+	line-height: 75px;
+	text-align: center;
+	transition: 0.5s;
+}
+
+.navigation ul li a .naviIcon i {
+	font-size: 24px;
+}
+
+.navigation ul li a .naviTitle {
+	position: absolute;
+	top: 50%;
+	left: 110px;
+	background: #fff;
+	transform: translateY(-50%);
+	padding: 5px 10px;
+	border-radius: 6px;
+	transition: 0.5s;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+	opacity: 0;
+	visibility: hidden;
+}
+.navigation ul li:hover a .naviTitle {
+	opacity: 1;
+	visibility: visible;
+}
+
+.waterMark {
+	position: absolute;
+	top: 100px;
+	font-size: 200px;
+	font-weight: 700;
+	opacity: 0.05;
+	font-family: "Playfair Display", Georgia, serif;
+}
+@media screen and (max-width: 480px) {
+	.waterMark {
+		font-size: 60px;
+	}
+}
+.waterMarkSkill {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	font-size: 200px;
+	font-weight: 700;
+	opacity: 0.05;
+	font-family: "Playfair Display", Georgia, serif;
+}
+@media screen and (max-width: 480px) {
+	.waterMarkSkill {
+		font-size: 60px;
+	}
 }
