--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8585,26 +8585,14 @@ body.is-preload .items.onload-fade-in > * > .inner {
 	}
 }
 
-.goalLeft {
-	width: 30%;
-	padding: 3em 2em 3em 0;
+.goalDown {
+	height: 70%;
+	padding: 3em 0 3em 0;
 	text-align: -webkit-auto;
 }
 @media screen and (max-width: 480px) {
-	.goalLeft {
-		width: 0%;
-		padding: 0;
-	}
-}
-.goalRight {
-	width: 70%;
-	padding: 3em 0em 3em 2em;
-	text-align: -webkit-auto;
-}
-@media screen and (max-width: 480px) {
-	.goalRight {
+	.goalDown {
 		width: 100%;
-		padding: 3em 2em 3em 0;
 	}
 }
 
@@ -8626,11 +8614,32 @@ body.is-preload .items.onload-fade-in > * > .inner {
 	margin-right: -15px;
 }
 
+.goal {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+}
 .goalContents {
+	display: flex;
+	justify-content: space-between;
 	margin-left: -15px;
 	margin-right: -15px;
 }
+@media screen and (max-width: 480px) {
+	.goalContents {
+		flex-direction: column;
+	}
+}
 
+.goal h3 {
+	font-family: "Karla", Arial, sans-serif;
+	font-size: 16px;
+	text-transform: uppercase;
+	font-weight: 700;
+	color: rgba(0, 0, 0, 0.8);
+	font-family: "Playfair Display", Georgia, serif;
+	margin: 0 0 30px 0;
+}
 .skillIntro {
 	margin-bottom: 3em;
 	text-align: start;
@@ -9064,9 +9073,14 @@ li img {
 	filter: grayscale(100%);
 }
 
-.li-001 {
-	margin-bottom: 10px;
+.goalContents .li {
+	width: 33%;
+	padding: 0 0.5em 0 0.5em;
 }
-.li-002 {
-	margin-top: 10px;
+@media screen and (max-width: 768px) {
+	.goalContents .li {
+		width: 100%;
+		height: 33%;
+		padding: 0.5em 0 0.5em 0;
+	}
 }
