--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6849,6 +6849,26 @@ body.is-preload .gallery.onload-fade-in article .image img {
 	max-width: 75vw;
 }
 
+.gallery.style2 article.first-projet {
+	-moz-flex-grow: 0;
+	-webkit-flex-grow: 0;
+	-ms-flex-grow: 0;
+	flex-grow: 0;
+	-moz-flex-shrink: 0;
+	-webkit-flex-shrink: 0;
+	-ms-flex-shrink: 0;
+	flex-shrink: 0;
+	display: block;
+	position: relative;
+	overflow: hidden;
+	width: 22.5rem;
+	max-width: 15vw;
+}
+
+.gallery.style2 article p {
+	font-size: x-small;
+}
+
 .gallery.style2 article .image {
 	display: block;
 	width: 100%;
@@ -7890,7 +7910,7 @@ body.is-preload .items.onload-fade-in > * > .inner {
 }
 
 @media screen and (max-width: 980px) {
-	.items.style2.medium > *:nth-child(-n + 3) {
+	.items.style2.gallery style2 medium > *:nth-child(-n + 3) {
 		border-top-width: 1px;
 	}
 
